Added get scores api call
Added multi user whittlists
Triggers now precompiled in classes

--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -9,6 +9,8 @@
                 {% endfor %}
             </ul>
 
+      <a href="{% url 'list_create' %}">Create new Wittl List</a>
+
         </div>
     </div>
 
