--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,7 +21,11 @@
     <link rel="stylesheet" href="/static/web/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/static/web/css/main.css">
 
-    <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    {% block css %}
+
+    {% endblock %}
+
+    <script src="/static/web/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]>
@@ -60,7 +64,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="/static/web/js/vendor/bootstrap.min.js"></script>
+{% block javascript %}
+
+{% endblock %}
 
 </body>
 </html>
