--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,73 +1,96 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
 
-    <link rel="stylesheet" href="/static/web/css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 50px;
-            padding-bottom: 20px;
-        }
-    </style>
-    <link rel="stylesheet" href="/static/web/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/static/web/css/main.css">
+    <meta name="viewport"
+          content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, width=device-width"/>
+
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <link rel="shortcut icon" href=""/>
+
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-title" content=""/>
+    <link rel="apple-touch-icon" sizes="152x152" href=""/>
+    <!-- iOS 7 iPhone @2x -->
+    <link rel="apple-touch-startup-image"
+          media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href=""/>
+
+    <title>My Wittlist</title>
+
+    <!-- Stylesheets -->
+    <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
+    <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
+
+    <!-- Custom styles for this template -->
+    <link href="/static/web/css/base.css" rel="stylesheet"/>
 
     {% block css %}
 
     {% endblock %}
 
-    <script src="/static/web/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
-<!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar">aaa</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="{% url 'list_list' %}">View Lists</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+
+<!-- Visual Debugging (e.g. current Boostrap/responsive screen width) -->
+<!-- <div class="debug">
+    <div class="visiblity">
+        <span class="visible-xs">Size XS</span>
+        <span class="visible-sm">Size SM</span>
+        <span class="visible-md">Size MD</span>
+        <span class="visible-lg">Size LG</span>
     </div>
+</div> -->
+
+<!-- Content here -->
+
+<!-- Sidebar -->
+<div class="sidebar">
+    <br/>
 </div>
 
+<!-- Main body -->
+<div class="wrapper">
 <div class="container">
-    {% block content %}
 
-    {% endblock %}
-    <hr>
+<header class="page-header">
+    <div class="logo-head col-sm-4">
+    </div>
+    <div class="col-sm-8">
+        <br/>
+        <br/>
+        <br/>
+    </div>
+</header>
 
-    <footer>
-        <p>&copy; Company 2014</p>
-    </footer>
-</div>
-<!-- /container -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
-<script src="/static/web/js/vendor/bootstrap.min.js"></script>
-{% block javascript %}
+{% block content %}
 
 {% endblock %}
 
+</div>
+</div>
+<!-- End main body -->
+
+
+<!-- JavaScript here
+================================================== -->
+<script src="/static/web/js/vendor/underscore.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="/static/web/js/vendor/bootstrap.js"></script>
+<script src="/static/web/js/vendor/isotope.pkgd.js"></script>
+<script src="/static/web/js/main.js"></script>
+{% block javascript %}
+{% endblock %}
 </body>
 </html>
