--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,15 +1,123 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
 
-{% block content %}
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Hello, world!</h1>
+        <meta name="viewport"
+              content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, width=device-width"/>
 
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-                jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-                unique.</p>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
+        <link rel="shortcut icon" href=""/>
 
-            <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <!-- iOS -->
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content=""/>
+        <link rel="apple-touch-icon" sizes="152x152" href=""/>
+        <!-- iOS 7 iPhone @2x -->
+        <link rel="apple-touch-startup-image"
+              media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href=""/>
+
+        <title>wittl</title>
+
+        <!-- Stylesheets -->
+        <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
+        <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
+
+        <!-- Custom styles for this template -->
+        <link href="/static/web/css/base.css" rel="stylesheet"/>
+
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+
+    </head>
+
+    <body>
+
+        <!-- Visual Debugging (e.g. current Boostrap/responsive screen width) -->
+        <!-- <div class="debug">
+            <div class="visiblity">
+                <span class="visible-xs">Size XS</span>
+                <span class="visible-sm">Size SM</span>
+                <span class="visible-md">Size MD</span>
+                <span class="visible-lg">Size LG</span>
+            </div>
+        </div> -->
+
+        <!-- Content here -->
+
+        <!-- Main body -->
+       	<div id="home">
+       		<nav id="main-nav" class="navbar navbar-default" role="navigation">
+			  <div class="container">
+			    <!-- Brand and toggle get grouped for better mobile display -->
+			    <div class="navbar-header">
+			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+			      <!-- <a class="navbar-brand" href="#">Brand</a> -->
+			    </div>
+
+			    <!-- Collect the nav links, forms, and other content for toggling -->
+			    <div class="collapse navbar-collapse">
+			      <ul class="nav navbar-nav">
+			        <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+			        <li><a href="#">Popular</a></li>
+			      </ul>
+			    </div><!-- /.navbar-collapse -->
+			  </div><!-- /.container-fluid -->
+			</nav>
+
+       		<section class="hero">
+                <header>
+                    <h1>wittl</h1>
+                    <h2>Reach better decisions, faster</h2>
+                </header>
+       		</section>
+
+            <section class="content">
+                <div class="container">
+
+                    <div class="strip">
+                        <header class="main-header col-xs-6 col-xs-offset-3">
+                            <h1>What's a wittl?</h1>
+                        </header>
+                    </div>
+
+                    <div class="col-xs-4">
+                        <h3>Subtitle</h3>
+                        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+
+                        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+
+                        <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+
+                        <p>Penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                    </div>
+
+                </div>
+            </section>
         </div>
-    </div>
-{% endblock %}
+        <!-- End main body -->
+
+
+        <!-- JavaScript here
+        ================================================== -->
+        <script src="/static/web/js/vendor/underscore.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="/static/web/js/vendor/bootstrap.js"></script>
+        <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
+        <script src="/static/web/js/main.js"></script>
+        {% block javascript %}
+        {% endblock %}
+    </body>
+</html>
