Further interface work

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,17 @@
 $body-font: 'Source Sans Pro', 'Tahoma', 'Helvetica Neue', 'Verdana', sans-serif !default;
 $theme-font: 'Titillium Web', 'Roboto', sans-serif !default;
 $heading-font: 'Roboto', 'Source Sans Pro', 'Helvetica Neue', sans-serif !default;
-$wittl-color: /*#c48ee3*/#f0b466;
+// $wittl-color: /*#c48ee3*/#f0b466;
+$bg-color: #FFF;
+$wittl-color: #fab03a;
 $heading-color: #433d47;
 $subheading-color: #aaa9aa;
+$sidebar-color: #EEE;
+
 $query-height: 35px;
 
 $wittl-header-height: 39px;
 $wittl-body-height: 220px;
+
+$sidebar-width: 80px;
+$header-height: 80px;
