--- a/web/templates/list/comparator.html
+++ b/web/templates/list/comparator.html
@@ -13,7 +13,7 @@
             <p>
                 <span class="wittl-name">Travel Cost</span>
                 <br/>
-                from <span class="primary-param" contenteditable>Newcastle-upon-T...</span>
+                from <input type='text' class="primary-param" value="Newcastle-upon-T..." />
             </p>
 
             <p class="wittl-description">The cost to get to your destination from your chosen start
