--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,8 +1,9 @@
-// Import bootstrap
-@import "vendor/bootstrap";
-
 // Import variables
 @import "variables";
+
+// Import vendor
+@import "vendor/bootstrap";
+@import "vendor/sidr";
 
 // Import components
 @import "components";
@@ -25,7 +26,7 @@ html, body {
 
 body {
   float: left;
-  background-color: #FFFFFF;
+  background-color: $bg-color;
   font-family: $body-font;
   letter-spacing: 1px;
 }
@@ -33,29 +34,54 @@ body {
 .sidebar {
   float: left;
   position: absolute;
+  width: $sidebar-width;
+  height: 100%;
+  background-color: $sidebar-color;
+
+  header {
+    text-align: center;
+    padding: 15px 0;
+    height: $header-height;
+    background-color: $wittl-color;
+    border-bottom: 1px solid #EEE;
+  }
 }
 
-.sidebar {
-  width: 60px;
-  height: 100%;
-  background-color: #EEE;
+#open-menu {
+  color: white;
+  font-size: 36px;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .wrapper {
-  background-color: #FFF;
-  padding-top: 10px;
+  background-color: $bg-color;
+  padding-left: $sidebar-width;
   padding-bottom: 40px;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: auto; 
 }
 
 .page-header {
   float: left;
   width: 100%;
-  margin: 20px 0;
+  position: fixed;
+  z-index: 5;
+  height: $header-height;
+  margin-top: 0;
+  margin-bottom: 0;
   padding: 20px 0;
   border: none;
+  background-color: #FFF;
+  border-bottom: 1px solid #EEE;
+  //box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+}
+
+.content {
+  padding-top: $header-height + 30;
 }
 
 section.pane {
@@ -229,8 +255,10 @@ section.pane {
           }
 
           .primary-param {
+            background: none;
+            border: none;
             color: $subheading-color;
-            border-bottom-color: $subheading-color;
+            border-bottom: 1px solid $subheading-color;
           }
 
           .wittl-description {
