--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -116,6 +116,7 @@
 {% endblock %}
 
 {% block javascript %}
+    <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script>
         $(function () {
