Progress on navigation

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,11 +2,12 @@ $body-font: 'Source Sans Pro', 'Tahoma', 'Helvetica Neue', 'Verdana', sans-serif
 $theme-font: 'Titillium Web', 'Roboto', sans-serif !default;
 $heading-font: 'Roboto', 'Source Sans Pro', 'Helvetica Neue', sans-serif !default;
 // $wittl-color: /*#c48ee3*/#f0b466;
-$bg-color: #FFF;
-$wittl-color: #fab03a;
+$bg-color: #FEFEFE;
+// $wittl-color: #fab03a;
+$wittl-color: #5cb4ff;
 $heading-color: #433d47;
 $subheading-color: #aaa9aa;
-$sidebar-color: #EEE;
+$sidebar-color: #3F4249;
 
 $query-height: 35px;
 
