--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -55,6 +55,10 @@
         <!-- Content here -->
         
         <div id="side-menu">
+            <header>
+                <h1>wittl</h1>
+            </header>
+
             <p>lkjnljnflejnfljnewlanflkw wflknwelkfn felknflwek lwef</p>
 
             <ul>
@@ -74,6 +78,28 @@
             <div class="sidebar">
                 <header>
                     <a id="open-menu" href="#open-menu"><i class="icon_menu"></i></a>
+                    <ul class="icon_nav"> 
+                        <li>
+                            <a href="#">
+                                <i class="icon_documents_alt"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon_star_alt"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon_ribbon_alt"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon_cogs"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </header>
             </div>
 
