--- a/sass/base.scss
+++ b/sass/base.scss
@@ -43,7 +43,26 @@ body {
     padding: 15px 0;
     height: $header-height;
     background-color: $wittl-color;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid $sidebar-color;
+  }
+}
+
+#side-menu {
+  background-color: $sidebar-color;
+
+  header {
+    background-color: $wittl-color;
+    height: $header-height;
+    border-bottom: 1px solid $sidebar-color;
+    width: 100%; 
+    text-align: center;
+    padding: 21px 0;
+
+    h1 {
+      margin: 0;
+      color: white;
+      font-size: 24px;
+    }
   }
 }
 
@@ -53,6 +72,31 @@ body {
 
   &:hover {
     text-decoration: none;
+  }
+}
+
+.icon_nav {
+  padding: 40px 0;
+  list-style-type: none;
+  color: #4c5260;
+
+  li {
+    text-align: center;
+    padding: 20px 0;
+
+    a {
+      color: #656b7a;
+      font-size: 28px;
+      -webkit-transition: color 0.15s ease-in;
+      transition: color 0.15s ease-in;
+
+      &:hover {
+        text-decoration: none;
+        color: lighten(#656b7a, 10%);
+        -webkit-transition: color 0.15s ease-in;
+        transition: color 0.15s ease-in;
+      }
+    }
   }
 }
 
@@ -93,7 +137,7 @@ section.pane {
 
   header {
     padding: 10px 0;
-    border-bottom: 1px solid #F7F7F7;
+    border-bottom: 1px solid #F1F1F1;
 
     h2 {
       font-family: $body-font;
@@ -415,7 +459,7 @@ section.pane {
       .detail {
         height: 80px;
         padding: 5px 15px;
-        border-top: 4px solid #ffdd8d;
+        border-top: 4px solid lighten($wittl-color, 10%);
 
         header {
           border: none;
