--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -116,6 +116,7 @@
 {% block javascript %}
     <script src="/static/web/js/vendor/handlebars.js"></script>
     <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
+    <script src="/static/web/js/wittl_list.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     {% verbatim %}
     <script id="modal-template" type="text/x-handlebars-template">
@@ -160,16 +161,6 @@
     {% endverbatim %}
     <script>
         $(function () {
-            var panelList = $('.wittls');
-            panelList.sortable({
-                // Only make the .panel-heading child elements support dragging.
-                // Omit this to make then entire <li>...</li> draggable.
-                handle: 'header',
-                update: function () {
-                    console.log("aa")
-                }
-            });
-
             $('.wittlist').on('click', '.card', function(e) {
                 var id = $(this).data('listItemId');
                 var url = '/static/web/dummy.json'; // DUMMY
