--- a/web/templates/list/comparator.html
+++ b/web/templates/list/comparator.html
@@ -1,7 +1,7 @@
 <li class="wittl" data-wittl-name="{{ comparator.comparator_name }}">
     <header>
-        <p class="name pull-left">{{ comparator.get_comparator_class.TITLE }} <input type='text' class="primary-param"
-                                                                                     value="Newcastle-upon-T..."/>
+        <p class="name pull-left">{{ comparator.get_comparator_class.TITLE }} {% if comparator.get_comparator_class.PRIMARY_FIELD %}<input type='text' class="primary-param"
+                                                                                     value="Newcastle-upon-T..."/>{% endif %}
         </p>
                   <span class="reveal pull-right">
                     <a href="#">
@@ -14,27 +14,32 @@
             <p>
                 <span class="wittl-name">{{ comparator.get_comparator_class.TITLE }}</span>
                 <br/>
-                from <input type='text' class="primary-param" value="Newcastle-upon-T..."/>
+                {% if comparator.get_comparator_class.PRIMARY_FIELD %}
+                    <input type='text' class="primary-param" value="Newcastle-upon-T..."/>
+                {% endif %}
             </p>
 
             <p class="wittl-description">{{ comparator.get_comparator_class.DESCRIPTION }}</p>
         </div>
         <div class="wittl-params">
-            <header>
-                <h3>Options</h3>
-            </header>
+            {% if comparator.get_comparator_class.EXTRA_FIELDS %}
+                <header>
+                    <h3>Options</h3>
+                </header>
 
-            <!-- Extra params -->
-            <div class="secondary-param">
-                      <span class="key">
-                        Transport Mode
+                <!-- Extra params -->
+                <div class="secondary-param">
+                    {% for field in comparator.form %}
+                        <span class="key">
+                        {{ field.label_tag }}
                       </span>
-                      <span class="value">
-                        <input type="text" class="form-control" placeholder="E.g. car..."/>
+                        <span class="value">
+                        <input type="text" name="{{ field.name }}" class="form-control" placeholder="..."/>
                       </span>
-            </div>
-            <!-- End extra params -->
-
+                    {% endfor %}
+                </div>
+                <!-- End extra params -->
+            {% endif %}
         </div>
     </section>
 </li>
