Theme and resizing, work on the navigation

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,6 +22,7 @@
         <title>My Wittlist</title>
 
         <!-- Stylesheets -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
         <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
         <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
 
@@ -59,12 +60,27 @@
                 <h1>wittl</h1>
             </header>
 
-            <p>lkjnljnflejnfljnewlanflkw wflknwelkfn felknflwek lwef</p>
-
-            <ul>
-                <li><a href="#">List 1</a></li>
-                <li class="active"><a href="#">List 2</a></li>
-                <li><a href="#">List 3</a></li>
+            <ul class="text_nav"> 
+                <li>
+                    <a href="#">
+                        Wittlists
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Starred
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Something
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Settings
+                    </a>
+                </li>
             </ul>
         </div>
 
@@ -78,29 +94,29 @@
             <div class="sidebar">
                 <header>
                     <a id="open-menu" href="#open-menu"><i class="icon_menu"></i></a>
-                    <ul class="icon_nav"> 
-                        <li>
-                            <a href="#">
-                                <i class="icon_documents_alt"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="icon_star_alt"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="icon_ribbon_alt"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="icon_cogs"></i>
-                            </a>
-                        </li>
-                    </ul>
                 </header>
+                <ul class="icon_nav"> 
+                    <li>
+                        <a href="#">
+                            <i class="icon_documents_alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="icon_star_alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="icon_ribbon_alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="icon_cogs"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
             <div class="main-pane">
