--- a/sass/base.scss
+++ b/sass/base.scss
@@ -39,7 +39,7 @@ body {
   header {
     text-align: center;
     padding: 15px 0;
-    height: $header-height;
+    height: $header-height; 
     background-color: $wittl-color;
     border-bottom: 1px solid $sidebar-color;
   }
@@ -73,14 +73,15 @@ body {
   }
 }
 
-.icon_nav {
+.icon_nav, .text_nav {
   padding: 40px 0;
   list-style-type: none;
   color: #4c5260;
 
   li {
     text-align: center;
-    padding: 20px 0;
+    padding: 15px 0;
+    height: 70px;
 
     a {
       color: #656b7a;
@@ -94,6 +95,22 @@ body {
         -webkit-transition: color 0.15s ease-in;
         transition: color 0.15s ease-in;
       }
+    }
+  }
+}
+
+.text_nav {
+
+  li {
+    text-align: left;
+    padding-left: 30px;
+
+    a {
+      font-family: $heading-font;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 2.3em;
+      text-transform: uppercase;
     }
   }
 }
@@ -116,7 +133,7 @@ body {
   float: left;
   width: 100%;
   position: fixed;
-  z-index: 5;
+  z-index: 15;
   height: $header-height;
   margin-top: 0;
   margin-bottom: 0;
@@ -129,6 +146,20 @@ body {
 
 .content {
   padding-top: $header-height + 30;
+}
+
+.wittlist-left.pane,
+.wittlist-right.pane {
+  float: left;
+  padding: 0 15px;
+}
+
+.wittlist-left.pane {
+  width: 70%;
+}
+
+.wittlist-right.pane {
+  width: 30%;
 }
 
 section.pane {
@@ -144,6 +175,25 @@ section.pane {
       letter-spacing: 2px;
       text-transform: uppercase;
       color: $wittl-color;
+
+      .browse {
+        float: right;
+        padding-right: 10px;
+        padding-top: 8px;
+        text-transform: none;
+        letter-spacing: 1px;
+        font-size: 13px;
+        font-weight: 300;
+
+        a {
+          color: $wittl-color;
+
+          &:hover {
+            color: lighten($wittl-color, 15%);
+            text-decoration: none;
+          }
+        }
+      }
     }
   }
 }
@@ -177,7 +227,7 @@ section.pane {
     width: 70px;
     color: #FFFFFF;
     background-color: $wittl-color;
-    font-family: $theme-font;
+    font-family: $heading-font;
     font-weight: 500;
     font-size: 12px;
     letter-spacing: 2px;
@@ -222,15 +272,16 @@ section.pane {
       -webkit-transition: height 0.3s ease-out;
 
       .primary-param {
+        width: 90px;
         text-transform: none;
         font-family: $body-font;
         font-weight: 300;
-        padding: 0 3px;
+        padding: 0 8px;
         padding-bottom: 1px;
         background: none;
         border: none;
-        color: $subheading-color;
-        border-bottom: 1px solid $subheading-color;
+        color: #FCFCFC;
+        border-bottom: 1px solid #FCFCFC;
       }
 
       & > header {
@@ -238,13 +289,18 @@ section.pane {
         z-index: 2;
         float: left;
         width: 100%;
+        height: $wittl-header-height;
         padding-bottom: 0;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
-        -webkit-transition: margin-top 0.5s ease-out, border-bottom-left-radius 0.5s ease-out 0.3s, border-bottom-right-radius 0.5s ease-out 0.3s;
-        transition: margin-top 0.5s ease-out, border-bottom-left-radius 0.5s ease-out 0.3s, border-bottom-right-radius 0.5s ease-out 0.3s;
+        -webkit-transition: margin-top 0.5s ease-out, 
+                            border-bottom-left-radius 0.3s ease-out 0.3s, 
+                            border-bottom-right-radius 0.3s ease-out 0.3s;
+        transition: margin-top 0.5s ease-out, 
+                            border-bottom-left-radius 0.3s ease-out 0.3s, 
+                            border-bottom-right-radius 0.3s ease-out 0.3s;
         border: none;
         background-color: $wittl-color;
         color: #FFFFFF;
@@ -302,6 +358,13 @@ section.pane {
             font-weight: 600;
             text-transform: uppercase;
             color: $wittl-color;
+          }
+
+          .primary-param {
+            color: $wittl-color;
+            border-color: $wittl-color;
+            width: auto;
+            max-width: 160px !important;
           }
 
           .wittl-description {
@@ -392,8 +455,12 @@ section.pane {
         header {
           border-bottom-left-radius: 0px;
           border-bottom-right-radius: 0px;
-          -webkit-transition: margin-top 0.5s ease-in, border-bottom-left-radius 0.3s ease-in, border-bottom-right-radius 0.3s ease-in;
-          transition: margin-top 0.5s ease-in, border-bottom-left-radius 0.3s ease-in, border-bottom-right-radius 0.3s ease-in;
+          -webkit-transition: margin-top 0.5s ease-in, 
+                              border-bottom-left-radius 0.3s ease-in, 
+                              border-bottom-right-radius 0.3s ease-in;
+          transition: margin-top 0.5s ease-in, 
+                              border-bottom-left-radius 0.3s ease-in, 
+                              border-bottom-right-radius 0.3s ease-in;
         }
 
         .wittl-body {
@@ -598,7 +665,7 @@ body.modal-open {
 
     .city {
       font-style: italic;
-      font-weight: 500;
+      font-weight: 400;
     }
 
     .description {
