--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -28,7 +28,7 @@
 
 {% block content %}
 
-    <section class="col-sm-9 pane">
+    <section class="wittlist-left pane">
         <header>
             <h2>My Wittlist - {{ list.name }}</h2>
         </header>
@@ -87,9 +87,9 @@
     </section>
 
 
-    <section class="col-sm-3 pane">
+    <section class="wittlist-right pane">
         <header>
-            <h2>Wittls</h2>
+            <h2>Wittls <small class="browse"><a href="#">Browse...</a></small></h2>
         </header>
 
         <div class="query-wrapper">
