--- a/sass/base.scss
+++ b/sass/base.scss
@@ -647,7 +647,7 @@ body.modal-open {
     .details {
       width: 100%;
       float: left;
-      padding-bottom: 10px;
+      padding-bottom: 20px;
 
       &> header {
        // padding-bottom: 10px;
@@ -707,6 +707,12 @@ body.modal-open {
         }
       }
     }
+
+   #map {
+    float: left;
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+   } 
   }
 }
-
