--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -61,7 +61,7 @@
                             <header class="col-xs-9">
                                 <h3 class="title">{{ list_item.name|truncatechars:15 }}</h3>
 
-                                <p class="wittl-meta-description">Ericeira, Portugal</p>
+                                <p class="wittl-meta-description">{{ list_item.decoded_attributes.city|truncatechars:20 }}</p>
                             </header>
                             <div class="user-metrics col-xs-3">
                                 <div class="row">
@@ -117,6 +117,8 @@
     <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
     <script src="/static/web/js/wittl_list.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgcL0rohxn0A99lQMRJ8WcN17NT_x9mf0&sensor=true">
+    </script>
     {% verbatim %}
     <script id="modal-template" type="text/x-handlebars-template">
       <div class="modal-body">
@@ -155,6 +157,8 @@
                 </tbody>
             </table>
         </div>
+        <div id="map">
+        </div>
       </div>
     </script>
     {% endverbatim %}
@@ -174,9 +178,22 @@
                 var src = $('#modal-template').html();
                 var template = Handlebars.compile(src);
 
+
                 var $modal = $('#card-detail');
                 $modal.find('.modal-content').empty().append(template(data));
+                render_map(data.latitude, data.longitude);
                 $modal.modal('show');
+            };
+
+            var render_map = function(lat, long) {
+                console.log(lat);
+                console.log(long);
+                var mapOptions = {
+                  center: new google.maps.LatLng(parseFloat(lat), parseFloat(long)),
+                  zoom: 8
+                };
+                var map = new google.maps.Map(document.getElementById("map"),
+                    mapOptions);
             };
 
             $(".comparator_form")
